# multi-agent-code-review-lab

./: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: macr-review.yml
cli/: agent_review.py
docs/: RELEASE_CHECKLIST.md  agent_framework_mapping.md  agent_system_upgrade_plan.md  cv_upgrade_analysis.md  llm_api_recommendation.md  multi_agent_system_evolution.md  project_closure_summary.md  project_outline.md  real_data_testing_plan.md  testing_issue_log.md
eval_sets/: phase1.jsonl  phase2_complex.jsonl  real_markupsafe_issues.jsonl
reports/: phase1_eval.md  phase2_complex_eval.md  real_data_showcase.md  real_markupsafe_eval.md
sample_repos/sample_python_api/: README.md
sample_repos/sample_python_api/backend/: auth.py  notifications.py  orders.py  payments.py  server.py
sample_repos/sample_python_api/tests/: test_auth.py
scripts/: check_demo_ready.sh  post_github_review.py
src/macr/: __init__.py  __main__.py  cli.py  contracts.py  costs.py  pr_outputs.py  prompts.py  runtime.py  schemas.py  viewer.py  workflow.py
src/macr/agents/: __init__.py  code_smell.py  critic.py  final_reviewer.py  monitor.py  patcher.py  (+7 more)
tests/: test_code_graph.py  test_code_smell.py  test_contracts.py  test_costs.py  test_critic.py  test_evidence_store.py  test_final_reviewer.py  test_github_review.py  test_orchestrator.py  test_patch_agent.py  test_patch_ranker.py  test_planner.py  test_pr_outputs.py  test_pr_reviewer.py  test_prompt_optimization.py  test_real_data.py  test_repo_map.py  test_routing_policy.py  test_viewer.py
web/: README.md
(+22 files in other folders)
